--- a/_quarto.yml
+++ b/_quarto.yml
@@ -1,16 +1,156 @@
 project:
   type: website
+  #output-dir: docs
+  
+  render:
+    - index.qmd
 
 website:
   title: "ESC"
+  #favicon: "./img/lights.png"
+  #twitter-card: true
+  #site-url: https://opendevsci.github.io/LongDev-ABCD/
+  page-navigation: true
+  open-graph: true
   navbar:
+    background: darkblue #slategray #primary #goldenrod
+    search: true
+    pinned: true
+    collapsed: true
     left:
-      - href: index.qmd
-        text: Home
-      - about.qmd
+      - text: "Home"
+        file: index.qmd
+    tools:
+      - icon: github
+        menu:
+          - text: Go to Project Repository
+            url: https://github.com/swhawes/esc
+          - text: Report a Bug
+            url: https://github.com/swhawes/esc/issues
+
+  sidebar:
+    - title: "ESC"
+      #logo: "./img/lights.png"
+      pinned: true
+      tools:
+        - icon: github
+          menu:
+            - text: Go to project repository
+              url: https://github.com/swhawes/esc
+            - text: Source Code
+              url: https://github.com/swhawes/esc
+            - text: Report a Bug
+              url: https://github.com/swhawes/esc/issues
+      style: "docked"
+      search: true
+      background: light
+      collapse-level: 1
+      # contents:
+      #  - manuscript/manuscript.qmd
+    # - title: "Examples"
+    #   contents:
+    #     - examples/examples.qmd
+    #     - section: "Traditional Linear Models"
+    #       contents:
+    #         - section: "Difference Scores"
+    #           contents:
+    #             - 1a_Examples_DifferenceScores_PairedTtests.qmd
+    #             - 1b_Examples_DifferenceScores_SimpleRegression.qmd
+    #         - section: "Residualized Change Scores"
+    #           contents:
+    #             - 2_Examples_ResidualizedChangeScores.qmd
+    #         - section: "Linear Mixed Models"
+    #           contents:
+    #             - 3a_Examples_LinearMixedModels.qmd
+    #             - 3b_Examples_LinearMixedModels.qmd
+    #     - section: "Traditional Non-linear Models"
+    #       contents:
+    #         - section: "Signed-Rank Test"
+    #           contents:
+    #             - 4_Examples_SignedRankTest.qmd
+    #     #     - section: "Marginal Models"
+    #     #       contents:
+    #     #         - 5_Examples_MarginalModels.qmd
+    #     #     - section: "Generalized Estimating Equations"
+    #     #       contents:
+    #     #         - 6_Examples_GeneralizedEstimatingEquations.qmd
+    #     #     - section: "Generalized Linear Mixed-Effects Models"
+    #     #       contents:
+    #     #         - 7_Examples_GeneralizedLinearMixedEffectsModels.qmd
+    #     - section: "SEM Approaches"
+    #       contents:
+    #     #     - section: "Autoregressive Crosslagged Panel Models"
+    #     #       contents:
+    #     #         - 8_Examples_AutoregressiveCrosslaggedPanelModels.qmd
+    #          - section: "Latent Change Scores Models"
+    #            contents:
+    #              - 9_Examples_LatentChangeScoresModels.qmd
+    #          - section: "LatentGrowthCurveModels"
+    #            contents:
+    #              - 10_Examples_LatentGrowthCurveModels.qmd
+    #     #     - section: "Multivariate Latent Growth Curve Models"
+    #     #       contents:
+    #     #         - 11_Examples_MultivariateLatentGrowthCurveModels.qmd
+    #     #     - section: "Latent Transition Analysis"
+    #     #       contents:
+    #     #         - 12_Examples_LatentTransitionAnalysis.qmd
+    #          - section: "Latent Class Growth Analysis"
+    #            contents:
+    #              - 13b_Examples_LatentClassGrowthAnalysis.qmd
+    #     #     - section: "Growth Mixture Models"
+    #     #       contents:
+    #     #         - 13_Examples_GrowthMixtureModels.qmd
+    #     #     - section: "State-Trait Models"
+    #     #       contents:
+    #     #         - 14_Examples_StateTraitModels.qmd
+    #     # - section: "Advanced SEM"
+    #     #   contents:
+    #     #     - 15_Examples_RandomInterceptCrosslaggedPanelModels.qmd
+    #     #     - 16_Examples_LatentCurveModelsStructuredResiduals.qmd
+    #     # - section: "Longitudinal Neuroimaging"
+    #     #   contents:
+    #     #     - blank.qmd
+    #     # - section: "Twin Modeling & Genetics Designs"
+    #     #   contents:
+    #     #     - blank.qmd
 
 format:
   html:
-    theme: cosmo
-    #css: styles.css
     toc: true
+    toc-depth: 1
+    toc-expand: 3
+    toc-title: Table of Contents
+    anchor-sections: true
+    smooth-scroll: true
+    linestretch: 1.5
+    link-external-icon: true
+    link-external-newwindow: true
+    code-copy: true
+    code-fold: show
+    code-summary: "Code"
+    code-overflow: scroll
+    code-line-numbers: TRUE
+    code-tools: true
+    code-block-bg: true
+    code-block-border-left: "#31BAE9"
+    html-math-method: katex
+    df-print: paged
+    options: max.print=75000
+    grid:
+      sidebar-width: 425px
+
+execute:
+  echo: true
+  message: false
+  warning: false
+  error: false
+  cache: true
+  cold-folding: show
+  R.options: list(width=220)
+  fig.align: "center"
+  out.width: "75%"
+  fig.asp: .75
+  dev: "cairo_pdf"
+  freeze: auto # re-render only when source changes
+
+#bibliography: manuscript/references.bib
